--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Laya</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="forgot_Pin"><u>Forgot Pin</u></string>
+    <string name="forgot_Pin"><u>Forgot Pin?</u></string>
+    <string name="forgot_PinFil"><u>Nakalimutan ang Pin?</u></string>
 
 </resources>
